MODLD-568: Fix sonar violation in tests